--- a/www/index.html
+++ b/www/index.html
@@ -5,20 +5,80 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
   <script src="components/loader.js"></script>
-  <script src="lib/onsenui/js/onsenui.min.js"></script>
 
+  <!-- JQuery 3.3.1-->
+  <script src="components/jquery-3.3.1.min.js"></script>
+  <script src="components/acoes.js"></script>
+
+  <!--boostrap 3.3.7-->
+  <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="components/loader.css">
-  <link rel="stylesheet" href="lib/onsenui/css/onsenui.css">
-  <link rel="stylesheet" href="lib/onsenui/css/onsen-css-components.css">
   <link rel="stylesheet" href="css/style.css">
-
-  <script>
-    ons.ready(function() {
-      console.log("Onsen UI is ready!");
-    });
-  </script>
 </head>
 <body>
-  This is a template for Onsen UI app.
+  <div class="container">
+    <div class="row line">
+      <div class="div col-xs-12">
+        <h1>ola mundo</h1>
+      </div><!--div col xs 12-->
+    </div><!--row-->
+    <div class="row line">
+      <div class="col-xs-12">
+        <input type="text" class="form-control display">
+      <!-- col xs 12--><br>
+    </div><!--row-->
+    <div class="row line">
+      <div class="col-xs-3">
+        <button class="btn btn-primary btn-block">7</button>
+      </div>
+      <div class="col-xs-3">
+        <button class="btn btn-primary btn-block">8</button>
+      </div>
+      <div class="col-xs-3">
+        <button class="btn btn-primary btn-block">9</button>
+      </div>
+      <div class="col-xs-3"><button class="btn btn-danger btn-block">+</button>
+      </div>      
+    </div><!--row 3-->    
+    <div class="row line">
+      <div class="col-xs-3">
+        <button class="btn btn-primary btn-block">4</button>
+      </div>
+      <div class="col-xs-3">
+        <button class="btn btn-primary btn-block">5</button>
+      </div>
+      <div class="col-xs-3">
+        <button class="btn btn-primary btn-block">6</button>
+      </div>
+      <div class="col-xs-3"><button class="btn btn-danger btn-block">-</button>
+      </div>
+    </div><!--row 3-->
+    <div class="row line">
+      <div class="col-xs-3">
+        <button class="btn btn-primary btn-block">1</button>
+      </div>
+      <div class="col-xs-3">
+        <button class="btn btn-primary btn-block">2</button>
+      </div>
+      <div class="col-xs-3">
+        <button class="btn btn-primary btn-block">3</button>
+      </div>
+      <div class="col-xs-3"><button class="btn btn-danger btn-block">*</button>
+      </div>
+    </div><!--row 3-->
+    <div class="row line">
+      <div class="col-xs-3">
+        <button class="btn btn-primary btn-block">CE</button>
+      </div>
+      <div class="col-xs-3">
+        <button class="btn btn-primary btn-block">0</button>
+      </div>
+      <div class="col-xs-3">
+        <button class="btn btn-success btn-block">=</button>
+      </div>
+      <div class="col-xs-3"><button class="btn btn-danger btn-block">/</button>
+      </div>
+    </div><!--row 3-->
+  </div><!--container-->
 </body>
 </html>
