Inserting function and values in buttons

--- a/www/index.html
+++ b/www/index.html
@@ -24,54 +24,54 @@
     </div><!--row-->
     <div class="row line">
       <div class="col-xs-12">
-        <input type="text" class="form-control display">
+        <input type="text" class="form-control display" id="display" readonly>
       <!-- col xs 12--><br>
     </div><!--row-->
     <div class="row line">
       <div class="col-xs-3">
-        <button class="btn btn-primary btn-block">7</button>
+        <button class="btn btn-primary btn-block btns"value="7">7</button>
       </div>
       <div class="col-xs-3">
-        <button class="btn btn-primary btn-block">8</button>
+        <button class="btn btn-primary btn-block btns" value="8">8</button>
       </div>
       <div class="col-xs-3">
-        <button class="btn btn-primary btn-block">9</button>
+        <button class="btn btn-primary btn-block btns" value="9">9</button>
       </div>
       <div class="col-xs-3"><button class="btn btn-danger btn-block">+</button>
       </div>      
     </div><!--row 3-->    
     <div class="row line">
       <div class="col-xs-3">
-        <button class="btn btn-primary btn-block">4</button>
+        <button class="btn btn-primary btn-block btns" value="4">4</button>
       </div>
       <div class="col-xs-3">
-        <button class="btn btn-primary btn-block">5</button>
+        <button class="btn btn-primary btn-block btns" value="5">5</button>
       </div>
       <div class="col-xs-3">
-        <button class="btn btn-primary btn-block">6</button>
+        <button class="btn btn-primary btn-block btns" value="6">6</button>
       </div>
       <div class="col-xs-3"><button class="btn btn-danger btn-block">-</button>
       </div>
     </div><!--row 3-->
     <div class="row line">
       <div class="col-xs-3">
-        <button class="btn btn-primary btn-block">1</button>
+        <button class="btn btn-primary btn-block btns" value="1">1</button>
       </div>
       <div class="col-xs-3">
-        <button class="btn btn-primary btn-block">2</button>
+        <button class="btn btn-primary btn-block btns" value="2">2</button>
       </div>
       <div class="col-xs-3">
-        <button class="btn btn-primary btn-block">3</button>
+        <button class="btn btn-primary btn-block btns" value="3">3</button>
       </div>
       <div class="col-xs-3"><button class="btn btn-danger btn-block">*</button>
       </div>
     </div><!--row 3-->
     <div class="row line">
       <div class="col-xs-3">
-        <button class="btn btn-primary btn-block">CE</button>
+        <button class="btn btn-primary btn-block" id="ce">CE</button>
       </div>
       <div class="col-xs-3">
-        <button class="btn btn-primary btn-block">0</button>
+        <button class="btn btn-primary btn-block btns" value="0">0</button>
       </div>
       <div class="col-xs-3">
         <button class="btn btn-success btn-block">=</button>
@@ -80,5 +80,6 @@
       </div>
     </div><!--row 3-->
   </div><!--container-->
+  </div>
 </body>
 </html>
